--- a/templates/login.html.twig
+++ b/templates/login.html.twig
@@ -1,19 +1,31 @@
 {% extends 'parent.html.twig' %}
-{% block body %}
-    <div class="container-form-connexion">
-        <div class="container-md">   
-            <div class="row">
-                <form method='POST' action='/login' class="col-lg-3 col-12 mx-auto form-connexion p-5 pt-4 mb-4">
 
-                    <div class='form-group'>
-                        <input type='text' class='form-control' id='identifiant' name='username' placeholder='Identifiant' required>
-                    </div>
-                    <div class='form-group mt-3'>
-                        <input type='password' class='form-control' id='password' name='password' placeholder='Mot de passe' required>
-                    </div>
-                    <button type='submit' class='btn btn-success mt-4 w-100'>Valider</button>
-                </form>
-            </div>
-        </div>
-    </div>
+{% block titre %}{{ parent() }}
+- Login{% endblock%}
+
+{% block stylesheets %}
+{{ parent() }}
+{% endblock%}
+
+{% block javascripts %}
+	{{ parent() }}
+{% endblock %}
+
+{% block body %}
+	<div class="container-form-connexion">
+		<div class="container-md">
+			<div class="row">
+				<form method='POST' action='/login' class="col-lg-3 col-12 mx-auto form-connexion p-5 pt-4 mb-4">
+
+					<div class='form-group'>
+						<input type='text' class='form-control' id='identifiant' name='username' placeholder='Identifiant' required>
+					</div>
+					<div class='form-group mt-3'>
+						<input type='password' class='form-control' id='password' name='password' placeholder='Mot de passe' required>
+					</div>
+					<button type='submit' class='btn btn-success mt-4 w-100'>Valider</button>
+				</form>
+			</div>
+		</div>
+	</div>
 {% endblock %}
