--- a/templates/navigation.html.twig
+++ b/templates/navigation.html.twig
@@ -5,20 +5,20 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
+            <ul class="navbar-nav me-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="/accueil">Accueil</a>
+                    <a class="nav-link" href="#">Accueil</a>
                 </li>
             </ul>
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="/profil">Profil</a>
+                    <a class="nav-link" href="#">Profil</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/notifications">Connexion</a>
+                    <a class="nav-link" href="#">Connexion</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/messages">Déconnexion</a>
+                    <a class="nav-link" href="#">Déconnexion</a>
                 </li>
             </ul>
         </div>
