Avancement de la page, affichage des likes et des commentaires

--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -1,36 +1,59 @@
 {% extends 'parent.html.twig' %}
 
 {% block stylesheets %}
-    <link rel="stylesheet" href="{{ asset('css/accueil.css') }}" type="text/css">
+	<link rel="stylesheet" href="{{ asset('css/accueil.css') }}" type="text/css">
 {% endblock %}
 
 {% block content %}
-    <div class="container">
-        <div class="row">
-            {% for photo in allPhotos %}
-                <div class="col-md-6 col-lg-6 mb-6">
-                    <div class="card">
-                        <img src="{{ asset('images/image1.jpg') }}" class="card-img-top img-fluid" alt="Photo">
-                        <div class="card-body">
-                            <p class="card-text">Likes: {{ photo.likesCount }}</p>
-                            {% if photo.user %}
-                                <p class="card-text">Posted by: {{ photo.user.username }}</p>
-                            {% else %}
-                                <p class="card-text">Unknown User</p>
-                                <!-- Gestion si l'utilisateur est introuvable -->
-                            {% endif %}
-                            <h5 class="card-title">{{ photo.description }}</h5>
-                            <p class="card-text">{{ photo.datePoste }}</p>
-                        </div>
+	<div class="container with-margin">
+		<div class="row">
+			{% for photo in allPhotos %}
+				<div class="col-md-6 col-lg-6 mb-6">
+					<div class="card">
+						<img src="{{ asset('images/image1.jpg') }}" class="card-img" alt="Photo">
+						<div class="card-body">
+							<p class="card-text">
+                                <button class="like-button">
+                                    <img src="{{ asset('images/like.png') }}" class="image-like"> 
+                                </button>
+                                {{ photo.likesCount }}
+                                <button class="like-button">
+                                    <img src="{{ asset('images/dislike.png') }}" class="image-like dislike">
+                                </button>
+                                 {{ photo.dislikesCount }}
+                                <span class="date">{{ photo.datePoste }}</span>
+                            </p>
 
-                        {% for comment in allComments %}
                             
-                            <p class="card-comment">{{ comment.description }}</p>
 
-                        {% endfor %}    
-                    </div>
-                </div>
-            {% endfor %}
-        </div>
-    </div>
+                            <h5 class="card-title">{{ photo.description }}</h5>
+							{% if photo.user %}
+								<p class="card-text">
+									@{{ photo.user.username }}</p>
+							{% else %}
+								<p class="card-text">Unknown User</p>
+								<!-- Gestion si l'utilisateur est introuvable -->
+							{% endif %}
+							
+						</div>
+
+                        <div class="comments-section">
+                            <h6>Commentaires :</h6>
+                            {% set commentsForPhoto = allComments|filter(comment => comment.photo.id == photo.id) %}
+                            {% if commentsForPhoto|length > 0 %}
+                                {% for comment in commentsForPhoto %}
+                                    <div class="comment">
+                                        <p class="comment-text">{{ comment.description }}</p>
+                                        <span class="comment-date">{{ comment.dateCommentaire }}</span>
+                                    </div>
+                                {% endfor %}
+                            {% else %}
+                                <p class="aucun-com">Aucun commentaire pour cette photo !</p>
+                            {% endif %}
+                        </div>
+					</div>
+				</div>
+			{% endfor %}
+		</div>
+	</div>
 {% endblock %}
