--- a/public/css/accueil.css
+++ b/public/css/accueil.css
@@ -14,8 +14,13 @@
 .container {
     display: flex;
     justify-content: center;
-    margin-top: 30px;
 }
+
+.with-margin {
+    margin-top: 30px; 
+    margin-bottom: 30px; 
+}
+
 
 .row {
     display: flex;
@@ -26,15 +31,70 @@
 
 
 .card {
-    width: 100%; /* Largeur maximale pour s'adapter à la grille */
-    max-width: 100%; /* Largeur maximale fixée pour les posts */
+    width: 100%;
+    max-width: 100%; 
     border: 1px solid #4a4a4a;
 }
 
-.card img {
+.card-img {
     max-width: 100%;
     max-height: 100%;
     width: auto;
     height: auto;
-    border: 1px solid #4a4a4a;
+    border-bottom: 1px solid #4a4a4a;
+}
+
+.card-text {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.date {
+    margin-left: auto; 
+}
+
+.image-like {
+    max-width: 40px;
+    max-height: 40px;
+}
+
+.like-button {
+    border: none;
+    background: none; 
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+}
+
+.like-button:focus {
+    outline: none; /* Supprime l'effet de focus par défaut sur le clic */
+}
+
+.comments-section {
+    margin-left: 20px; 
+    margin-right: 20px;
+    margin-bottom: 7px;
+}
+
+.comment {
+    border: 1px solid #ccc;
+    padding: 8px;
+    margin-bottom: 10px;
+    border-radius: 5px;
+    background-color: #f9f9f9;
+    margin-left: 15px;
+}
+
+.comment-text {
+    margin-bottom: 4px;
+}
+
+.comment-date {
+    font-size: 12px;
+    color: #888;
+}
+
+.aucun-com {
+    margin-left: 15px;
 }
