--- a/templates/login.html.twig
+++ b/templates/login.html.twig
@@ -1,17 +1,20 @@
 {% extends 'parent.html.twig' %}
 
-{% block titre %}{{ parent() }}
-- Login{% endblock%}
+{% block titre %}
+	{{ parent() }}
+{% endblock %}
+
 
 {% block stylesheets %}
-{{ parent() }}
-{% endblock%}
+	{{ parent() }}
+{% endblock %}
 
 {% block javascripts %}
 	{{ parent() }}
 {% endblock %}
 
-{% block body %}
+{% block content %}
+
 	<div class="container-form-connexion">
 		<div class="container-md">
 			<div class="row">
