création d'un user ok

--- a/templates/edit_profil.html.twig
+++ b/templates/edit_profil.html.twig
@@ -2,7 +2,7 @@
 {%block  javascripts %}
 <script src="{{asset('js/edit_profil.js')}}"></script>
 {% endblock %}
-{%block body %}
+{%block content %}
 
 <div class='modal fade' id='editRuche' tabindex='-1' aria-labelledby='' aria-hidden='true'>
 	<div class='modal-dialog'>
