--- a/public/css/accueil.css
+++ b/public/css/accueil.css
@@ -71,6 +71,7 @@
     outline: none; /* Supprime l'effet de focus par défaut sur le clic */
 }
 
+/* Style pour l'affichage des commentaires */
 .comments-section {
     margin-left: 20px; 
     margin-right: 20px;
@@ -84,17 +85,91 @@
     border-radius: 5px;
     background-color: #f9f9f9;
     margin-left: 15px;
+    margin-top: 18px;
 }
 
 .comment-text {
     margin-bottom: 4px;
+    margin-left: 6px;
+    font-size: 15px;
 }
 
 .comment-date {
     font-size: 12px;
     color: #888;
+    margin-left: 6px;
 }
 
 .aucun-com {
     margin-left: 15px;
 }
+
+.comment-user {
+    font-size: 12px;
+    font-size: bold;
+}
+
+/* Bouton 'Ajouter un commentaire' */
+.comment-button {
+    float: right;
+    padding: 6px 12px;
+    border: 1px solid #abababaf;
+    border-radius: 4px;
+    background-color: #ebebeb;
+    color: #333;
+    font-size: 13px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    outline: none;
+}
+
+.comment-button:hover {
+    background-color: #d3d3d3;
+    border-color: #bbbbbbcf;
+    color: #222;
+}
+
+
+/* Style pour le formulaire de d'ajout de commentaires */
+.comment-form {
+    margin-top: 15px;
+    margin-left: 15px;    
+    
+}
+
+/* Style pour la zone de texte */
+.comment-form textarea {
+    width: 100%;
+    height: 44px;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+    resize: vertical; 
+    box-sizing: border-box;
+    font-size: 14px;
+}
+
+/* Bouton 'Ajouter' du formulaire */
+.comment-form input[type="submit"] {
+    display: block;
+    width: 50%;
+    padding: 6px;
+    margin-top: 5px;
+    border: none;
+    border-radius: 5px;
+    background-color: #2f77ea; 
+    color: white; 
+    cursor: pointer;
+    transition: background-color 0.3s ease;   
+}
+
+.comment-form input[type="submit"]:hover {
+    background-color: #5b92eb; /* Couleur de fond modifiée au survol */
+}
+
+.boutonAjouter {
+    display: flex;
+    justify-content: center; /* Centre horizontalement */
+    align-items: center;
+}
+
