Affichage des commentaires enfant terminés

--- a/public/css/accueil.css
+++ b/public/css/accueil.css
@@ -90,14 +90,14 @@
 
 .comment-text {
     margin-bottom: 4px;
-    margin-left: 6px;
+    margin-left: 8px;
     font-size: 15px;
 }
 
 .comment-date {
     font-size: 12px;
     color: #888;
-    margin-left: 6px;
+    margin-left: 8px;
 }
 
 .aucun-com {
@@ -173,3 +173,6 @@
     align-items: center;
 }
 
+.comment-child {
+    margin-left: 15px;
+}
