--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -41,6 +41,22 @@
 								<button class="comment-button" onclick="toggleCommentForm(this)">+ Ajouter un commentaire</button>
 
 							</h6>
+							<div
+								class="comment-form" style="display: none;">
+								<!-- Formulaire pour ajouter un commentaire -->
+								<form action="http://127.0.0.1:3000/api/photos/{{ photo.id }}/commentaires" method="POST">
+									<textarea name="commentaire" rows="4" cols="50" placeholder="Écrivez votre commentaire ici..."></textarea>
+									<div class="boutonAjouter">
+										<input type="submit" value="Ajouter">
+									</div>
+								</form>
+							</div>
+							<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+							<script>
+								function toggleCommentForm(button) {
+$(button).closest('.comments-section').find('.comment-form').toggle();
+}
+							</script>
 							{% set commentsForPhoto = allComments|filter(comment => comment.photo.id == photo.id) %}
 							{% if commentsForPhoto|length > 0 %}
 								{% for comment in commentsForPhoto %}
@@ -48,32 +64,36 @@
 										<strong class="comment-user">@{{ comment.user.username }}</strong>
 										<p class="comment-text">{{ comment.description }}</p>
 										<span class="comment-date">{{ comment.dateCommentaire }}</span>
+
+										<!-- Vérification des commentaires enfants -->
+										{% set childrenComments = commentsForPhoto|filter(item => item.commentaireParent is not null and item.commentaireParent.id == comment.id) %}
+										{% if childrenComments is not empty %}
+											<div class="children-comments">
+												{% for childComment in childrenComments %}
+													<div class="comment-child">
+														<strong class="comment-user">@{{ childComment.user.username }}</strong>
+														<p class="comment-text">{{ childComment.description }}</p>
+														<span class="comment-date">{{ childComment.dateCommentaire }}</span>
+													</div>
+												{% endfor %}
+											</div>
+										{% endif %}
 									</div>
 								{% endfor %}
 							{% else %}
 								<p class="aucun-com">Aucun commentaire pour cette photo !</p>
 							{% endif %}
-							<div
-								class="comment-form" style="display: none;">
-								<!-- Formulaire pour ajouter un commentaire -->
-								<form
-									action="http://127.0.0.1:3000/api/photos/{{ photo.id }}/commentaires" method="POST">
-									<textarea name="commentaire" rows="4" cols="50" placeholder="Écrivez votre commentaire ici..."></textarea>
-                                    <div class="boutonAjouter">
-									    <input type="submit" value="Ajouter">
-                                    </div>
-								</form>
-							</div>
-							<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-							<script>
-								function toggleCommentForm(button) {
-                                    $(button).closest('.comments-section').find('.comment-form').toggle();
-                                }
-							</script>
+
 						</div>
 					</div>
 				</div>
 			{% endfor %}
 		</div>
 	</div>
+	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+	<script>
+		function toggleCommentForm(button) {
+$(button).closest('.comments-section').find('.comment-form').toggle();
+}
+	</script>
 {% endblock %}
