--- a/public/css/accueil.css
+++ b/public/css/accueil.css
@@ -175,4 +175,18 @@
 
 .comment-child {
     margin-left: 15px;
+    margin-top: 5px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
+.intern-comment {
+    margin-left: 6px;
+}
+
+.children-comments {
+    gap: 5px;
+    display: flex;
+    flex-direction: column;
+
 }
