--- a/templates/login.html.twig
+++ b/templates/login.html.twig
@@ -18,7 +18,7 @@
 	<div class="container-form-connexion">
 		<div class="container-md">
 			<div class="row">
-				<form method='POST' action='/login' class="col-lg-3 col-12 mx-auto form-connexion p-5 pt-4 mb-4">
+				<form method='POST' action='/login' class="col-lg-3 col-12 mx-auto form-connexion pt-4 mb-4">
 
 					<div class='form-group'>
 						<input type='text' class='form-control' id='identifiant' name='username' placeholder='Identifiant' required>
@@ -28,6 +28,10 @@
 					</div>
 					<button type='submit' class='btn btn-success mt-4 w-100'>Valider</button>
 				</form>
+			</div>
+			<div class="row">
+				<p class="col-12 text-center">Pas de compte ? <a href="/register">Inscrivez-vous</a>
+				</p>
 			</div>
 		</div>
 	</div>
