--- a/templates/navigation.html.twig
+++ b/templates/navigation.html.twig
@@ -14,7 +14,7 @@
                     <a class="nav-link" href="/login">Connexion</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/register">Nouvel Utilisateur</a>
+                    <a class="nav-link" href="/register">S'inscrire</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/logout">Déconnexion</a>
