--- a/templates/navigation.html.twig
+++ b/templates/navigation.html.twig
@@ -1,24 +1,28 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
-        <a class="navbar-brand" href="/"><span>Instagrume</span></a>
+        <a class="navbar-brand" href="/">
+            <span>Instagrume</span>
+        </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-            
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="/edit_profil">Profil</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/login">Connexion</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/register">S'inscrire</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/logout">Déconnexion</a>
-                </li>
+            <ul class="navbar-nav ml-auto"> <!-- Aligner à droite -->
+                {% if actualUserName %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="/edit_profil">Profil</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/logout">Déconnexion</a>
+                    </li>
+                {% else %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="/login">Connexion</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/register">S'inscrire</a>
+                    </li>
+                {% endif %}
             </ul>
         </div>
     </div>
