--- a/templates/navigation.html.twig
+++ b/templates/navigation.html.twig
@@ -1,6 +1,11 @@
+{% block stylesheets %}
+	<link rel="stylesheet" href="{{ asset('css/navigation.css') }}" type="text/css">
+{% endblock %}
+
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container">
+    <div class="container cont-nav">
         <a class="navbar-brand" href="/">
+			<img src="{{ asset('images/logo.png' )}}" alt="Logo" class="logo-img">
             <span>Instagrume</span>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
