--- a/public/css/accueil.css
+++ b/public/css/accueil.css
@@ -154,7 +154,9 @@
     outline: none;
 }
 
-.comment-button:focus {
+.comment-button:focus,
+.rep-comment-button:focus,
+.rep-rep-comment-button:focus {
     outline: none; /* Supprime l'effet de focus par défaut sur le clic */
 }
 
@@ -173,7 +175,9 @@
 }
 
 /* Style pour la zone de texte */
-.comment-form textarea {
+.comment-form textarea, 
+.rep-comment-form textarea,
+.rep-rep-comment-form textarea {
     width: 100%;
     height: 44px;
     padding: 10px;
@@ -185,7 +189,9 @@
 }
 
 /* Bouton 'Ajouter' du formulaire */
-.comment-form input[type="submit"] {
+.comment-form input[type="submit"],
+.rep-comment-form input[type="submit"],
+.rep-rep-comment-form input[type="submit"] {
     display: block;
     width: 50%;
     padding: 6px;
@@ -198,8 +204,28 @@
     transition: background-color 0.3s ease;   
 }
 
-.comment-form input[type="submit"]:hover {
+.comment-form input[type="submit"]:hover, 
+.rep-comment-form input[type="submit"]:hover,
+.rep-rep-comment-form input[type="submit"]:hover {
     background-color: #5b92eb; /* Couleur de fond modifiée au survol */
+}
+
+.rep-comment-form,
+.rep-rep-comment-form {
+    margin-top: 5px;
+    margin-bottom: 7px;
+}
+
+.rep-comment-form textarea,
+.rep-rep-comment-form textarea {
+    height: 40px; /* ajustez la hauteur souhaitée */
+    font-size: 13px; /* ajustez la taille de la police */
+}
+
+.rep-comment-form input[type="submit"],
+.rep-rep-comment-form input[type="submit"] {
+    font-size: 12px; 
+    margin-top: 1px;
 }
 
 .boutonAjouter {
@@ -226,9 +252,10 @@
 
 }
 
-.rep-comment-button {
-    font-size: 15px;
-    margin-left: 15px;
+.rep-comment-button,
+.rep-rep-comment-button {
+    font-size: 14px;
+    margin-left: 10px;
     border: none; 
     color: #007afc;
     background-color: transparent; 
